--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve"
   },
   "include": [
-    "1 sprint/1 week"
+    "src"
   ]
 }
